<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2008, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<resources>

    <string name="loroclip_app_name">LoroClip</string>

    <!--
     Main / media select activity
     -->

    <string name="main_activity_label">LoroClip</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and LoroClip requires it to be writable.</string>
    <string name="no_sdcard">Sorry, LoroClip can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, LoroClip can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <!--
     Menu items
     -->

    <string name="menu_save">Save</string>
    <string name="menu_show_all_bookmarks">Bookmarks</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name">LoroClip</string>

    <!--
     Delete confirmation dialog
     -->

    <string name="delete_music">Delete Music</string>
    <string name="delete_record">Delete Record</string>
    <string name="delete_file">Delete File</string>

    <string name="confirm_delete_loroclip">Are you sure?</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, LoroClip is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, LoroClip can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <!--
     About
     -->

    <string name="about_title">About LoroClip</string>
    <string name="about_text"><![CDATA[Use LoroClip to edit MP3, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable, or get MP3s using the Amazon MP3 application.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion 2.7\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nLoroClip is free software, distributed under the Apache 2.0 license.\n]]></string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_record">RecordActivity</string>

    <!-- Strings by DevSusu -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="agree">agree</string>
    <string name="disagree">disagree</string>
    <string name="edit_record">Edit Record</string>

    <!-- added by DevSusu on 5.21 -->
    <string name="discard_record">Discard</string>
    <string name="discard_confirm">Recording would not be saved!</string>

    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="not_synced">This file is not synced</string>

    <string name="save_record">Save Recording</string>
    <string name="set_record_name">Edit your record name</string>
    
    <string name="edit_name">Edit Filename</string>
    
    <string name="delete_record_confirm">Sure to delete record?</string>
    <string name="delete_file_confirm">Sure to delete file?</string>
    <string name="deleted">Deleted successfully</string>
    <string name="changed">Changed successfully</string>
    <string name="saved">Saved successfully</string>
    <string name="synced">Synced successfully</string>
    <string name="file_not_exist">File dose not exist</string>

    <string name="delete">delete</string>
    <string name="title_activity_play">PlayActivity</string>

    <!--<string name="app_description">The most efficient, complete way to manage your recordings</string>-->
    <string name="app_description">Record with Efficiency. Anywhere, Anytime.</string>
    <string name="app_description_1">Record with Efficiency.</string>
    <string name="app_description_2">Anywhere, Anytime.</string>
    
    <string name="login_with_facebook">Login with FaceBook</string>

    <string name="edit_history">Edit History</string>
    <string name="new_record">New Record</string>
    <string name="login_error">Failed to sign in. Please retry.</string>

    <string name="record_not_found">Record file not found</string>
    <string name="file_download_required">File Download Required</string>

    <string name="download">Download</string>

    <string name="nudge_user">Record with Button below after Syncing</string>
    <string name="ok">Ok</string>
</resources>
