<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/record_activity"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbar_actionbar" layout="@layout/toolbar_default"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_elevation"
            android:background="@drawable/actionbar_shadow" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:id="@+id/displayViewTmp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal">

            <Chronometer
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chronometer"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp"
                android:gravity="center"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_elevation"
                android:background="@drawable/shadow_top" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/myPrimaryColor">

            <ImageView
                android:id="@+id/record_trash_img"
                android:src="@drawable/trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:clickable="true" />

            <ImageView
                android:id="@+id/record_action_img"
                android:src="@drawable/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:clickable="true" />

            <ImageView
                android:id="@+id/record_done_img"
                android:src="@drawable/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:clickable="true" />

        </LinearLayout>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bookmark_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_elevation"
                android:background="@drawable/actionbar_shadow" />

            <Button
                android:id="@+id/tmpBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

        </FrameLayout>

    </LinearLayout>


</LinearLayout>