...

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/edit_activity">

    <include android:id="@+id/toolbar_actionbar" layout="@layout/toolbar_default"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
...
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/transparent"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>

